--- a/CoffeeShop/Base.lproj/Main.storyboard
+++ b/CoffeeShop/Base.lproj/Main.storyboard
@@ -63,38 +63,38 @@
         <scene sceneID="ldC-U3-fcy">
             <objects>
                 <tableViewController id="gxY-Ly-BRN" customClass="TableDetailVC" customModule="CoffeeShop" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="BsN-7L-ayQ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="BsN-7L-ayQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableDetailCell" rowHeight="143" id="GmI-Ag-wpV" customClass="TableDetailViewCell" customModule="CoffeeShop" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="143"/>
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="143"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GmI-Ag-wpV" id="pTI-Re-CRb">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="142.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9b5-10-2tI">
-                                            <rect key="frame" x="24" y="95.5" width="327" height="21"/>
+                                            <rect key="frame" x="8" y="97.5" width="343" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zmj-5K-etN">
-                                            <rect key="frame" x="0.0" y="124.5" width="375" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <rect key="frame" x="8" y="126.5" width="367" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="9b5-10-2tI" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leadingMargin" constant="8" id="7OK-6i-sWF"/>
+                                        <constraint firstItem="9b5-10-2tI" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leading" constant="8" id="7OK-6i-sWF"/>
                                         <constraint firstAttribute="trailing" secondItem="Zmj-5K-etN" secondAttribute="trailing" id="8Ma-Qc-nRO"/>
                                         <constraint firstItem="Zmj-5K-etN" firstAttribute="top" secondItem="9b5-10-2tI" secondAttribute="bottom" constant="8" id="abu-DN-NnN"/>
                                         <constraint firstAttribute="bottom" secondItem="Zmj-5K-etN" secondAttribute="bottom" id="rAL-WD-UBq"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="9b5-10-2tI" secondAttribute="trailing" constant="8" id="spi-uI-c4t"/>
-                                        <constraint firstItem="Zmj-5K-etN" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leading" id="yQu-t1-kIa"/>
+                                        <constraint firstItem="Zmj-5K-etN" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leading" constant="8" id="yQu-t1-kIa"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -103,14 +103,14 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderDetailCell" rowHeight="143" id="g5M-wg-xUm" customClass="OrderDetailViewCell" customModule="CoffeeShop" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="171" width="375" height="143"/>
+                                <rect key="frame" x="0.0" y="198.5" width="375" height="143"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g5M-wg-xUm" id="J6B-cp-w8a">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="142.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocn-QO-9hK">
-                                            <rect key="frame" x="24" y="11" width="327" height="75"/>
+                                            <rect key="frame" x="36" y="11" width="315" height="75"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -118,10 +118,10 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Số lượng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBe-HB-sHw">
                                             <rect key="frame" x="190.5" y="102" width="64.5" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="textColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-bu-u0L">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-bu-u0L">
                                             <rect key="frame" x="271" y="102" width="80" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="80" id="OLO-KI-EW4"/>
@@ -135,7 +135,7 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="FSL-bu-u0L" secondAttribute="trailing" constant="8" id="3Gf-Y1-abB"/>
                                         <constraint firstItem="qBe-HB-sHw" firstAttribute="top" secondItem="ocn-QO-9hK" secondAttribute="bottom" constant="16" id="83n-at-BvD"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="FSL-bu-u0L" secondAttribute="bottom" id="8KI-mH-l5l"/>
-                                        <constraint firstItem="ocn-QO-9hK" firstAttribute="leading" secondItem="J6B-cp-w8a" secondAttribute="leadingMargin" constant="8" id="941-E1-q3q"/>
+                                        <constraint firstItem="ocn-QO-9hK" firstAttribute="leading" secondItem="J6B-cp-w8a" secondAttribute="leading" constant="36" id="941-E1-q3q"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="ocn-QO-9hK" secondAttribute="trailing" constant="8" id="Ao7-Aa-jUY"/>
                                         <constraint firstItem="ocn-QO-9hK" firstAttribute="top" secondItem="J6B-cp-w8a" secondAttribute="topMargin" id="EPL-iH-7rO"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="qBe-HB-sHw" secondAttribute="bottom" id="adf-jb-aiB"/>
