--- a/CoffeeShop/Base.lproj/Main.storyboard
+++ b/CoffeeShop/Base.lproj/Main.storyboard
@@ -75,29 +75,43 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="142.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9b5-10-2tI">
-                                            <rect key="frame" x="8" y="97.5" width="343" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9b5-10-2tI">
+                                            <rect key="frame" x="8" y="0.0" width="307" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zmj-5K-etN">
-                                            <rect key="frame" x="8" y="126.5" width="367" height="16"/>
+                                            <rect key="frame" x="8" y="29.5" width="307" height="113"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-0P-TtN">
+                                            <rect key="frame" x="317" y="56.5" width="50" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="eAy-r6-gGT"/>
+                                            </constraints>
+                                            <state key="normal" title="Order"/>
+                                            <connections>
+                                                <action selector="btnOrderTap:" destination="gxY-Ly-BRN" eventType="touchUpInside" id="FcS-7h-0y9"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="9b5-10-2tI" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leading" constant="8" id="7OK-6i-sWF"/>
-                                        <constraint firstAttribute="trailing" secondItem="Zmj-5K-etN" secondAttribute="trailing" id="8Ma-Qc-nRO"/>
+                                        <constraint firstAttribute="trailing" secondItem="9b5-10-2tI" secondAttribute="trailing" constant="60" id="Cqs-UJ-Z8n"/>
+                                        <constraint firstAttribute="trailing" secondItem="Zmj-5K-etN" secondAttribute="trailing" constant="60" id="Zjx-a9-BGf"/>
                                         <constraint firstItem="Zmj-5K-etN" firstAttribute="top" secondItem="9b5-10-2tI" secondAttribute="bottom" constant="8" id="abu-DN-NnN"/>
+                                        <constraint firstItem="bw6-0P-TtN" firstAttribute="centerY" secondItem="pTI-Re-CRb" secondAttribute="centerY" id="c1T-Ri-B0T"/>
+                                        <constraint firstItem="9b5-10-2tI" firstAttribute="top" secondItem="pTI-Re-CRb" secondAttribute="top" id="iVX-u4-g2o"/>
                                         <constraint firstAttribute="bottom" secondItem="Zmj-5K-etN" secondAttribute="bottom" id="rAL-WD-UBq"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="9b5-10-2tI" secondAttribute="trailing" constant="8" id="spi-uI-c4t"/>
+                                        <constraint firstAttribute="trailing" secondItem="bw6-0P-TtN" secondAttribute="trailing" constant="8" id="suz-yc-ZA9"/>
                                         <constraint firstItem="Zmj-5K-etN" firstAttribute="leading" secondItem="pTI-Re-CRb" secondAttribute="leading" constant="8" id="yQu-t1-kIa"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="btnOrder" destination="bw6-0P-TtN" id="VWx-yA-OqR"/>
                                     <outlet property="lblTableName" destination="9b5-10-2tI" id="zIO-3z-nGR"/>
                                     <outlet property="lblTableStatus" destination="Zmj-5K-etN" id="cIE-F2-eeM"/>
                                 </connections>
@@ -110,13 +124,14 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocn-QO-9hK">
-                                            <rect key="frame" x="36" y="11" width="315" height="75"/>
+                                            <rect key="frame" x="16" y="11" width="335" height="75"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Số lượng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBe-HB-sHw">
                                             <rect key="frame" x="190.5" y="102" width="64.5" height="30"/>
+                                            <color key="tintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -126,7 +141,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="80" id="OLO-KI-EW4"/>
                                             </constraints>
-                                            <color key="textColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="textColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
@@ -135,7 +150,7 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="FSL-bu-u0L" secondAttribute="trailing" constant="8" id="3Gf-Y1-abB"/>
                                         <constraint firstItem="qBe-HB-sHw" firstAttribute="top" secondItem="ocn-QO-9hK" secondAttribute="bottom" constant="16" id="83n-at-BvD"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="FSL-bu-u0L" secondAttribute="bottom" id="8KI-mH-l5l"/>
-                                        <constraint firstItem="ocn-QO-9hK" firstAttribute="leading" secondItem="J6B-cp-w8a" secondAttribute="leading" constant="36" id="941-E1-q3q"/>
+                                        <constraint firstItem="ocn-QO-9hK" firstAttribute="leading" secondItem="J6B-cp-w8a" secondAttribute="leading" constant="16" id="941-E1-q3q"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="ocn-QO-9hK" secondAttribute="trailing" constant="8" id="Ao7-Aa-jUY"/>
                                         <constraint firstItem="ocn-QO-9hK" firstAttribute="top" secondItem="J6B-cp-w8a" secondAttribute="topMargin" id="EPL-iH-7rO"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="qBe-HB-sHw" secondAttribute="bottom" id="adf-jb-aiB"/>
@@ -156,7 +171,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="M5E-eM-fGB">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="DQ0-7U-HAD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="DQ0-7U-HAD">
                             <connections>
                                 <action selector="btnAddDrink:" destination="gxY-Ly-BRN" id="xYw-nR-qut"/>
                             </connections>
