--- a/CoffeeShop/Base.lproj/Main.storyboard
+++ b/CoffeeShop/Base.lproj/Main.storyboard
@@ -93,9 +93,6 @@
                                                 <constraint firstAttribute="width" constant="50" id="eAy-r6-gGT"/>
                                             </constraints>
                                             <state key="normal" title="Order"/>
-                                            <connections>
-                                                <action selector="btnOrderTap:" destination="gxY-Ly-BRN" eventType="touchUpInside" id="FcS-7h-0y9"/>
-                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -129,11 +126,11 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Số lượng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBe-HB-sHw">
-                                            <rect key="frame" x="190.5" y="102" width="64.5" height="30"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBe-HB-sHw">
+                                            <rect key="frame" x="133" y="102" width="122" height="30"/>
                                             <color key="tintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-bu-u0L">
@@ -160,6 +157,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="lblDrinkName" destination="ocn-QO-9hK" id="7L9-o1-SOx"/>
+                                    <outlet property="lblDrinkPrice" destination="qBe-HB-sHw" id="ZmU-MA-flD"/>
                                     <outlet property="txtDrinkAmount" destination="FSL-bu-u0L" id="xdx-aZ-mE0"/>
                                 </connections>
                             </tableViewCell>
@@ -179,9 +177,11 @@
                     </navigationItem>
                     <connections>
                         <segue destination="0Oi-yB-4bv" kind="show" identifier="showDrink" id="PmK-ky-C42"/>
+                        <segue destination="xiq-4x-ejI" kind="unwind" identifier="unWindToTable" unwindAction="unWindToTable:" id="vmK-RB-wPz"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q1x-tu-8JH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="xiq-4x-ejI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="476" y="895.50224887556226"/>
         </scene>
